# mysql-tarantool-replication

./: .gitignore  .gitmodules  CMakeLists.txt  dbreader.cpp  main.cpp
cmake/: FindMySQL.cmake
